change default keyboard

--- a/files/preseed.cfg.erb
+++ b/files/preseed.cfg.erb
@@ -7,7 +7,7 @@ d-i debian-installer/locale string en_US
 # Disable automatic (interactive) keymap detection.
 d-i console-setup/ask_detect boolean false
 #d-i console-setup/modelcode string pc105
-d-i console-setup/layoutcode string us
+d-i console-setup/layoutcode string jp108
 # To select a variant of the selected layout (if you leave this out, the
 # basic form of the layout will be used):
 #d-i console-setup/variantcode string dvorak
